objects/DataDotComDemoContactResetValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Dot Com Demo Contact Reset Values</label>
</CustomObject>